--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,3 @@
-//plugins {
-//    id 'com.android.application'
-//}
 apply plugin: 'com.android.application'
 
 android {
@@ -10,12 +7,16 @@ android {
         }
     }
 
+    buildTypes.each {
+        it.buildConfigField 'String', 'YELP_API_KEY', YelpApiKey
+    }
+
     compileSdkVersion  29 //30
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "com.technight.myrestaurants"
-        minSdkVersion 15  //21
+        minSdkVersion 21  //21
         targetSdkVersion 29  //30
         versionCode 1
         versionName "1.0"
@@ -52,5 +53,15 @@ android {
         annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.0'
         //Robolectric dependencies //
         testImplementation 'org.robolectric:robolectric:4.4'
+        // Retrofit //
+        implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+        implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+        // Recycler //
+        implementation 'androidx.recyclerview:recyclerview:1.1.0'
     }
+}
+
+dependencies {
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 }
