--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
         it.buildConfigField 'String', 'YELP_API_KEY', YelpApiKey
     }
 
-    compileSdkVersion  29 //30
+    compileSdkVersion   29 //30
     buildToolsVersion "30.0.3"
 
     defaultConfig {
@@ -85,6 +85,8 @@ android {
         // firebase //
         implementation platform('com.google.firebase:firebase-bom:26.8.0')
         implementation 'com.google.firebase:firebase-analytics'
+        implementation 'com.google.firebase:firebase-auth'
+        implementation 'com.google.firebase:firebase-firestore'
         implementation 'com.google.firebase:firebase-database'
     }
 }
